--- a/.github/workflows/test-env.yaml
+++ b/.github/workflows/test-env.yaml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   #https://stackoverflow.com/questions/61255989/dynamically-retrieve-github-actions-secret
-  get-environment-name
+  get-environment-name:
     name: Determine Github Environment
     runs-on: ubuntu-latest
     outputs:
