--- a/.github/workflows/test-env.yaml
+++ b/.github/workflows/test-env.yaml
@@ -31,7 +31,7 @@ jobs:
         run: |
           echo CUSTOM_ENV= ${{ github.event.inputs.environment }} >> $GITHUB_ENV
       - name: Output selected environment
-        run: 'echo "Extracted environment name: $CUSTOM_ENV"' && echo ::set-output name=CUSTOM_ENV::"$CUSTOM_ENV"
+        run: echo "Extracted environment name: $CUSTOM_ENV"  && echo ::set-output name=environment:: $CUSTOM_ENV
 
   consume-environment:
     name: consume the custom environment
