--- a/.github/workflows/test-env.yaml
+++ b/.github/workflows/test-env.yaml
@@ -38,6 +38,7 @@ jobs:
 
   consume-environment:
     name: consume the custom environment
+    runs-on: ubuntu-latest
     needs: [get-environment-name]
     environment: ${{ needs.get-environment-name.outputs.environment }}
     steps:
