--- a/.github/workflows/job-output-dynamic-gh-env.yaml
+++ b/.github/workflows/job-output-dynamic-gh-env.yaml
@@ -37,7 +37,7 @@ jobs:
           echo "Extracted environment name: $CUSTOM_ENV"  && echo "::set-output name=environment:: $CUSTOM_ENV"
 
   consume-environment:
-    name: consume the custom environment
+    name: Consume the custom environment
     runs-on: ubuntu-latest
     needs: [get-environment-name]
     environment: ${{ needs.get-environment-name.outputs.environment }}
