fix: add missing input

--- a/.github/workflows/job-output-dynamic-gh-env.yaml
+++ b/.github/workflows/job-output-dynamic-gh-env.yaml
@@ -7,6 +7,10 @@ on:
         description: "Github Workflow Environment"
         type: environment
         required: true
+      development-branch:
+        description: test
+        required: false
+        default: ""
 
 jobs:
   #https://stackoverflow.com/questions/61255989/dynamically-retrieve-github-actions-secret
