--- a/.github/workflows/job-output-dynamic-gh-env.yaml
+++ b/.github/workflows/job-output-dynamic-gh-env.yaml
@@ -25,7 +25,6 @@ jobs:
       - name: Determine if dev #commits to the default branch should be dev env
         if: "(github.event.ref == format('refs/heads/{0}', github.event.repository.default_branch) || startsWith(github.event.ref, 'refs/tags/v') || github.event.ref == format('refs/heads/{0}', inputs.development-branch))"
         run: |
-          echo ${{ }}
           echo CUSTOM_ENV=dev >> $GITHUB_ENV
 
       - name: Determine if prod #commits with tags on default branch should be prod env
@@ -41,6 +40,7 @@ jobs:
           echo CUSTOM_ENV=$WORKFLOW_INPUT  >> $GITHUB_ENV
       - name: Output selected environment
         run: |
+          echo ${{ github.event.repository.default_branch }}
           echo "Extracted environment name: $CUSTOM_ENV"  && echo "::set-output name=environment:: $CUSTOM_ENV"
 
   consume-environment:
