--- a/.github/workflows/job-output-dynamic-gh-env.yaml
+++ b/.github/workflows/job-output-dynamic-gh-env.yaml
@@ -47,11 +47,13 @@ jobs:
     name: Consume the custom environment
     runs-on: ubuntu-latest
     needs: [get-environment-name]
-    environment: ${{ needs.get-environment-name.outputs.environment }}
+    environment: 
+      name: ${{ needs.get-environment-name.outputs.environment }}
     steps:
       - name: consume environment
         env:
           VALUE: ${{secrets.ENVIRONMENT_VALUE}}
         run: |
+          echo "The name of the targeted env: ${{ needs.get-environment-name.outputs.environment }}"
           echo ${{ env.CUSTOM_ENV }} &&
           echo $(echo $VALUE | sed 's/./& /g')
