wip: attempt straight secret output

--- a/.github/workflows/job-output-dynamic-gh-env.yaml
+++ b/.github/workflows/job-output-dynamic-gh-env.yaml
@@ -56,5 +56,4 @@ jobs:
           VALUE: ${{secrets.ENVIRONMENT_VALUE}}
         run: |
           echo "The name of the targeted env: ${{ needs.get-environment-name.outputs.environment }}"
-          echo ${{ env.CUSTOM_ENV }} &&
-          echo $(echo $VALUE | sed 's/./& /g')
+          echo $(echo $VALUE)
