--- a/.github/workflows/job-output-dynamic-gh-env.yaml
+++ b/.github/workflows/job-output-dynamic-gh-env.yaml
@@ -54,7 +54,8 @@ jobs:
       - name: consume environment
         env:
           VALUE: ${{secrets.ENVIRONMENT_VALUE}}
+          ENV: ${{ needs.get-environment-name.outputs.environment }}"
         run: |
-          echo "The name of the targeted env: ${{ needs.get-environment-name.outputs.environment }}"
+          echo "The name of the targeted env: $ENV"
           echo $(echo $VALUE > output.txt)
-          cat output.txt
+          echo "The secret value: $(cat output.txt)"
